--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,18 @@ dev_dependencies:
   permission_handler: ^10.2.0
   path_provider: ^2.1.4
 
+
+  loading_animation_widget: ^1.2.1
+  flutter_video_info: ^1.3.2
+  flutter_vlc_player: ^7.4.2
+  volume_controller: ^2.0.8
+  screen_brightness: ^2.0.0+2
+
+
+  subtitle: ^0.1.0-beta.3
+#  video_player: ^2.9.1
+  chewie: ^1.8.5
+  flutter_unity_widget: ^2022.2.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
