--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   video_player: ^2.9.1
+  video_thumbnail: ^0.5.3
+  shared_preferences: ^2.3.2
   permission_handler: ^10.2.0
   path_provider: ^2.1.4
 
